# build-flet-apk

./: .gitignore  main.py  project.toml  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml  test-1.yml
